<resources>
    <string name="app_name">分由设备</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="houseKeeperHint">检测不到可用的SD卡</string>
    <string name="loadHintInfo">SD卡操作失败</string>
    <string name="versionUpdate">检测到新版本,是否下载?</string>
    <string name="downloadVersionCode">下载的版本号:</string>
    <string name="curVersionCode">当前版本号:</string>
    <string name="versionUpdateing">正在下载中...</string>
    <string name="download">下载</string>
    <string name="ver_download_ok">下载完成,正在安装!</string>
    <string name="talkLater">取消</string>
    <string name="Loading">加载中</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="alert">提示</string>
    <string name="no_strong_permission_do_myself">请手动设置允许访问储存器的权限</string>
    <string name="no_strong_permission_tips">请通过访问储存器的权限,否则不能正常使用此软件</string>
    <string name="item_found">首页</string>
    <string name="item_my">个人中心</string>
    <string name="title_my_device">我的设备</string>
    <string name="title_my_user">个人中心</string>
    <string name="tiile_monitor">视频监控</string>
    <string name="tiile_found">首页</string>
    <string name="title_control_setting">设置</string>
    <string name="title_register">注册</string>
    <string name="title_forgot">忘记密码</string>
    <string name="title_setting">设置</string>
    <string name="title_about_software">关于软件</string>
    <string name="func_introduce">功能介绍</string>
    <string name="title_myiotinfo">我的资料</string>
    <string name="title_account_safe">帐户与安全</string>
    <string name="title_modify_phone">修改手机号码</string>
    <string name="title_modify_passwd">修改密码</string>
    <string name="title_modify_nickname">修改密码</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_keymagr">设备管理</string>
    <string name="title_remotedev">设备管理</string>
    <string name="title_feedback">帮助与反馈</string>
    <string name="title_caidmagr">区域管理</string>
    <string name="ctl_newdev">新设备</string>
    <string name="tip_devname">设备名</string>
    <string name="tip_devflag">标识</string>
    <string name="tip_addr">地址</string>
    <string name="tip_password">密码</string>
    <string name="tip_host">主机</string>
    <string name="tip_port">端口</string>
    <string name="tip_my_load">加载中...</string>
    <string name="menu_reg">注册</string>
    <string name="msg_alert">提示</string>
    <string name="msg_not_same_passwd">两次密码不一样</string>
    <string name="msg_not_null_passwd">密码不能为空</string>
    <string name="msg_not_null_email">邮箱不能为空</string>
    <string name="msg_not_null_phone">电话号码不能为空</string>
    <string name="msg_not_null_nickname">呢称不能为空</string>
    <string name="msg_not_null_checkcode">验证码不能为空</string>
    <string name="lost_json_parameter">缺少JSON参数</string>
    <string name="btn_mod">确定修改</string>
    <string name="yunline">云在线</string>
    <string name="frist_use_dev">第一次使用请填写设备控制密码</string>
    <string name="input_passwd_tip">请输入硬件密码</string>
    <string name="income">进入</string>
    <string name="ctldev_set1">添加设备</string>
    <string name="ctldev_set2">设备管理</string>
    <string name="title_activity_sub_dev_set_info">dev_set_info</string>
    <string name="config_title">一键配置网络</string>
    <string name="footer_title">DESIGNED AND DEVELOPED BY</string>
    <string name="password_hint">密码 </string>
    <string name="ssid_label">SSID</string>
    <string name="gatewayip">网关IP</string>
    <string name="key_label">Key</string>
    <string name="devicename_label">Device Name</string>
    <string name="start_label_1">Start 1.0</string>
    <string name="start_label_2">开始搜索</string>
    <string name="stop_label">Stop</string>
    <string name="back_label">Back</string>
    <string name="about_us_label">About Us</string>
    <string name="contact_label">Contact</string>
    <string name="about_us_desc_para_two">We continue to shatter traditional paradigms thanks largely to our dedication to and belief in quality ,communicative design.</string>
    <string name="about_us_content">Rav</string>
    <string name="alert_easylink_title">提示</string>
    <string name="alert_invalid_input_title">无效输入</string>
    <string name="alert_successfully_connected">一键配置成功</string>
    <string name="alert_connection_failed">Failed to configure EMW device</string>
    <string name="alert_connection_timeout">连接EMW失败,请重新尝试</string>
    <string name="alert_successfully_failed">Failed to configure EMW device</string>
    <string name="alert_no_network_title">找不到网络</string>
    <string name="alert_invalid_password_msg">请输入有效的密码</string>
    <string name="alert_invalid_gatewayip_msg">请输入有效的网关IP</string>
    <string name="alert_invalid_ssid_mesg">请输入有效的SSID</string>
    <string name="alert_invalid_key_mesg">请输入有效的16个字符</string>
    <string name="alert_no_wifi_mesg">WiFi not available.Please check your WiFi connection.</string>
    <string name="email_forgot">邮箱取回密码</string>
    <string name="phone_forgot">手机取回密码</string>
    <string name="signup_account_not_exist">用户不存在</string>
    <string name="checkcode_error">验证码错误</string>
    <string name="lost_param">缺少参数</string>
    <string name="config_default_gateway_val">127.0.0.1</string>
    <string name="config_default_device_name">设备名称</string>
    <string name="easylink_string_ok">ok</string>
    <string name="user_info">User Info</string>
    <string name="title_activity_frist_mod_tmey">FristModTmeyActivity</string>
    <string name="title_activity_second_tme">SecondTmeActivity</string>
    <string name="title_activity_second_tme2">SecondTmeActivity2</string>
    <string name="title_activity_frist_mod_tmey2">FristModTmeyActivity2</string>
    <string name="httpfaild">请求失败</string>
    <string name="http_retry">正在重新尝试提交数据...</string>
    <string name="forgot_mail_format_err">邮箱格式错误</string>
    <string name="forgot_no_user">不存在邮箱用户</string>
    <string name="forgot_send_fail">请求失败</string>
    <string name="forgot_empty_email">缺少邮箱参数</string>
    <string name="email_send_ok">邮件成功发送,请查收!!</string>
    <string name="signup_email_err">邮箱格式错误</string>
    <string name="signup_email_not_null">邮箱不能为空</string>
    <string name="signup_phone_err">手机号码格式错误</string>
    <string name="signup_phone_not_null">手机号码不能为空</string>
    <string name="signup_nick_not_null">呢称不能为空</string>
    <string name="passwd_cannot_be_empty">密码不能为空</string>
    <string name="signup_operat_fail">请求失败</string>
    <string name="signup_userid_repeat">用户ID已经存在</string>
    <string name="signup_account_repeat">用户已被注册</string>
    <string name="signup_ok">注册成功</string>
    <string name="account_has_been_disabled">账号已被禁用</string>
    <string name="useda_inaction">账号未激活</string>
    <string name="useda_empty_key">钥匙为空</string>
    <string name="signin_empty_account">请填写登录邮箱账号</string>
    <string name="signin_empty_password">请填写密码</string>
    <string name="signin_reactive">重新激活</string>
    <string name="signin_login_fail">密码错误</string>
    <string name="signin_user_disable">账户已被禁用</string>
    <string name="signin_no_user">账户还未被注册</string>
    <string name="info_title_remote">设备管理</string>
    <string name="info_title_area">区域管理</string>
    <string name="info_title_camera_backup">监控备份</string>
    <string name="info_title_setting">设置</string>
    <string name="info_title_nick">呢称:</string>
    <string name="info_title_uid">用户ID:</string>
    <string name="myprofile_account_disable">账户被禁用</string>
    <string name="myprofile_no_user">不存在此用户</string>
    <string name="myprofile_operat_fail">操作失败</string>
    <string name="myprofile_lost_param">缺少参数</string>
    <string name="myprofile_key_invalid">无效钥匙</string>
    <string name="my_username">用户名</string>
    <string name="my_passwd">密码</string>
    <string name="my_remember">忘记密码</string>
    <string name="my_login">登录</string>
    <string name="setting_account_and_safe">账号与安全</string>
    <string name="setting_about_software">关于软件</string>
    <string name="setting_feedback">帮助与反馈</string>
    <string name="setting_quit">退出</string>
    <string name="setting_software_introduce">功能介绍</string>
    <string name="setting_check_version">检查新版本</string>
    <string name="not_need_update">版本已经是最新的</string>
    <string name="asafe_uid">用户ID</string>
    <string name="asafe_em">邮箱</string>
    <string name="asafe_mob">手机</string>
    <string name="asafe_modpasswd">修改密码</string>
    <string name="asafe_create_time">账号创建时间</string>
    <string name="modphone_number">手机号码</string>
    <string name="modphone_sms_code">短信验证码</string>
    <string name="modphone_getsms">获取短信</string>
    <string name="modphone_sec">秒</string>
    <string name="modphone_nocode">验证码不能为空</string>
    <string name="modphone_nophone">电话号码不能为空</string>
    <string name="vode_invalid">验证码无效</string>
    <string name="modpwd_oldp">旧密码</string>
    <string name="modpwd_newp">新密码</string>
    <string name="modpwd_confirmp">确认新密码</string>
    <string name="modpwd_notnull">密码不能为空</string>
    <string name="modpwd_notsame">新密码与确认密码不一样</string>
    <string name="modpwd_oldp_fail">旧密码错误</string>
    <string name="modpwd_ok">修改密码成功</string>
    <string name="modnick">请输入呢称</string>
    <string name="modnick_ok">修改呢称成功</string>
    <string name="modnick_notnull">呢称不能为空</string>
    <string name="title_modicon">上传头像</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="upload_file_fail">上传图片失败</string>
    <string name="upicon_from_cam">拍照</string>
    <string name="upicon_from_rom">从手机相册选择</string>
    <string name="upload_file_ok">头像上传成功</string>
    <string name="upload_file_now">正在上传图片:</string>
    <string name="cmagr_caid">CAID:</string>
    <string name="cmagr_add_my">添加我的CAID</string>
    <string name="cmagr_add_share">添加分享CAID</string>
    <string name="cmagr_del_dev_http_fail">删除失败,请重新尝试操作</string>
    <string name="cmagr_online_undel">在线设备不允许删除</string>
    <string name="cmagr_del">成功移除离线设备</string>
    <string name="cmagr_try_reset_caid">正在尝试解除设备绑定...</string>
    <string name="cmagr_reset_caid">成功解除绑定</string>
    <string name="cmagr_reset_caid_fail">解除绑定失败</string>
    <string name="cshare_code">分享码:</string>
    <string name="cshare_yes">分享节点</string>
    <string name="cshare_no">取消分享</string>
    <string name="caidedit_del">删除</string>
    <string name="caidedit_title">标题:</string>
    <string name="caidedit_mtitle">修改标题</string>
    <string name="caidedit_mod_title_ok">修改成功</string>
    <string name="caidedit_title_notnull">标题不能为空</string>
    <string name="caidedit_isdel">是否删除CAID</string>
    <string name="caidadd_title">添加CAID</string>
    <string name="caidshareadd_title">添加共享CAID</string>
    <string name="qr_product_id">产品ID</string>
    <string name="qr_mark">备注</string>
    <string name="dev_uuid">设备ID</string>
    <string name="remove_bind_dev">点击解除设备绑定</string>
    <string name="bind_caid_n">已绑定区域CAID</string>
    <string name="detail_device">设备详细</string>
    <string name="detail_device_online">联网状态</string>
    <string name="wealth_magr">资金余额</string>
    <string name="moneyft">元</string>
    <string name="balance_money">余额</string>
    <string name="submit">提交</string>
    <string name="pleaseinputmoney">请输入提取金额</string>
    <string name="recvmoneyaccount">收款账号</string>
    <string name="gratuity">手续费</string>
    <string name="set_price_worktime_11">半小时 / 1元</string>
    <string name="set_price_worktime_12">半小时 / 2元</string>
    <string name="set_price_worktime_13">半小时 / 2.5元</string>
    <string name="set_price_worktime_21">1小时 / 1元</string>
    <string name="set_price_worktime_22">1小时 / 2元</string>
    <string name="set_price_worktime_23">1小时 / 2.5元</string>
    <string name="set_price_worktime_31">2小时 / 1.5元</string>
    <string name="set_price_worktime_32">2小时 / 2.5元</string>
    <string name="set_price_worktime_33">2小时 / 3元</string>
</resources>